Updated web page

--- a/Webapp HTML/index.html
+++ b/Webapp HTML/index.html
@@ -38,7 +38,7 @@
 							<p>Giving your art the security it deserves<br />
 							by utilizing the power of AI </p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button scrolly">Learn more</a></li>
+								<li><a href="aimodel.html" class="button scrolly">Learn more</a></li>
 							</ul>
 							<section>
 									<form method="post" action="#">
@@ -125,7 +125,7 @@
 
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="artsecurity.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
